--- a/documents/final/v3/v3.md
+++ b/documents/final/v3/v3.md
@@ -1,4 +1,4 @@
-__Propositions__
+Propositions
 e_ns = true if a card in hand has value n and suit s
 k_i = true if hand has an i number of cards.
 p_ns = true if piled card is value n and suit s
@@ -20,7 +20,7 @@ us = true if pile card is picked up (option 1)
 ud = true if random card from deck is picked up (option 2)
 l = p_ns less than 7
 
-__Constraints__ 
+Constraints
 Card rules in general:
 1<=i<=5, so the number of cards in hand is in between 1-5.
 1<=n<=13, so n can only be ace, 1, 2,...,10, jack, queen, king.
